# news_scraping

./: .gitignore  Dockerfile  LICENSE  Pipfile  README.md  api.md  base.cfg  deploy.sh  pytest.ini  setup.cfg
src/: app.py  consts.py  db.py  engine.py  exceptions.py  lambda_main.py  main.py  playground.ipynb  requestor.py  utils.py
src/api/article/: __init__.py  article.py  repository.py
src/api/feed/: __init__.py  feed.py  repository.py
src/api/feedoutlet/: __init__.py  feedoutlet.py  repository.py
src/api/lib/: db.py
src/api/strategy/: __init__.py  repository.py  strategy.py
src/models/: __init__.py  article.py  custom_base_model.py  feed.py  feedoutlet.py  nine_entertainment.py  outlet.py  strategy.py
src/scrapers/_test/: __init__.py  _test.py
src/scrapers/afr/: __init__.py  afr.py
src/scrapers/aljazeera/: __init__.py  aljazeera.py  model.py
src/scrapers/bbc/: __init__.py  bbc.py
src/scrapers/guardian/: __init__.py  guardian.py
src/scrapers/newscomau/: __init__.py  newscomau.py
src/scrapers/nytimes/: __init__.py  nytimes.py
src/scrapers/theage/: __init__.py  model.py  theage.py
src/templates/: newscomau.cfg
templates/: afr.cfg  aljazeera.cfg  aljazeera_multi.cfg  aljazeera_single.cfg  bbc.cfg  climate.cfg  global-climate.cfg  guardian.cfg  mixed.cfg  newscomau.cfg  newscomau_banking.cfg  newscomau_hitech.cfg  newscomau_world_markets.cfg  nytimes.cfg  theage.cfg  theage_businesseconomy.cfg  theage_businessmarkets.cfg
tests/: test_engine.py  test_models.py  test_requestor.py  test_utils.py  theage_article.json
(+1 files in other folders)
