[metadata]
name = news_scraping
version = 0.0.1
description = None
long_description_content_type = text/markdown
long_description = file: README.md
author = Thomas Scelsi
author_email = tlscelsi@gmail.com
license = MIT
license_file = LICENSE

[options]
packages = find:
package_dir = 
	= src
include_package_data = True
python_requires = >=3.10
install_requires = 
	pipenv

[options.packages.find]
where = src

[sdist]
formats = zip, gztar

[coverage:run]
branch = True

[coverage:report]
show_missing = True
skip_covered = True

[tool:pytest]
addopts = --cov src --cov-report xml
asyncio_mode = auto

